--- a/public/index.html
+++ b/public/index.html
@@ -28,11 +28,12 @@
         padding: 10px;
         font-size: 16px;
         cursor: pointer;
+        margin-top: 10px;
       }
     </style>
   </head>
   <body>
-    <h1>AuthAPI Login</h1>
+    <h1>AuthAPI Test</h1>
     <form id="loginForm">
       <input
         type="text"
@@ -50,10 +51,13 @@
       />
       <button type="submit">Login</button>
     </form>
+
+    <button id="logoutButton">Logout</button>
     <div id="response"></div>
 
     <script>
       const form = document.getElementById('loginForm')
+      const logoutButton = document.getElementById('logoutButton')
       const responseDiv = document.getElementById('response')
 
       form.addEventListener('submit', async (e) => {
@@ -75,6 +79,26 @@
           if (res.ok) {
             responseDiv.innerText = `Success: ${data.message}`
           } else {
+            responseDiv.innerText = `Error: ${data.message}`
+          }
+        } catch (err) {
+          responseDiv.innerText = `Error: ${err.message}`
+        }
+      })
+
+      logoutButton.addEventListener('click', async () => {
+        try {
+          const res = await fetch('/logout', {
+            method: 'POST',
+            credentials: 'include',
+          })
+
+          if (res.ok) {
+            responseDiv.innerText = 'Logout successful'
+            logoutButton.classList.add('hidden')
+            form.classList.remove('hidden')
+          } else {
+            const data = await res.json()
             responseDiv.innerText = `Error: ${data.message}`
           }
         } catch (err) {
